Escaped background image url in helper

--- a/app/templates/lendix.hbs
+++ b/app/templates/lendix.hbs
@@ -1,7 +1,7 @@
 {{#each model as |project|}}
   <article class="project">
     <div class="img-container">
-      <div class="img-holder" style="background-image: url('https://cdn.lendix.com/{{project.illustration.url}}');">
+      <div class="img-holder" style={{project-image-style project.illustration.url}}>
     </div>
     </div>
     <div class="details">
