--- a/public/assets/vendor.css
+++ b/public/assets/vendor.css
@@ -1,6 +1,6 @@
 .body {
   white-space: nowrap;
-  margin: 0 auto;
+  font-family: Open Sans;
 }
 
 .project {
@@ -22,7 +22,7 @@
 .img-container {
   background-color: rgb(230, 234, 238);
   height: 300px;
-  padding: 25px 20px;
+  padding: 25px;
   box-sizing: border-box;
   border-radius: 5px 5px 0 0;
 }
@@ -35,5 +35,67 @@
 }
 
 .details {
-  border: 1px solid rgb(230, 234, 238);
+  border: 1px solid rgb(232, 236, 240);
+  position: relative;
+  padding: 10px 0;
+  background-color: rgb(239, 244, 247);
+  border-radius: 0 0 5px 5px;
+}
+
+.country {
+  text-align: center;
+  position: absolute;
+  top: -8px;
+  width: 100%;
+}
+
+.country img {
+  border: 1px solid white;
+  border-radius: 3px;
+}
+
+.detail {
+  display: inline-block;
+  padding: 0 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+
+.detail h3 {
+  margin: 0;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.date {
+  color: #777;
+}
+
+.amount {
+  text-align: center;
+}
+
+.grade span::before {
+  content: "";
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 7.5px;
+  background-color: #69b6d5;
+}
+
+.detail-column {
+  margin: 5px 0;
+}
+
+.detail-column-2 .detail {
+  width: 50%;
+}
+
+.detail-column-3 .detail {
+  width: 33.33%;
+}
+
+.detail:last-child {
+  text-align: right;
 }
