--- a/public/assets/vendor.css
+++ b/public/assets/vendor.css
@@ -1,11 +1,26 @@
+.menu {
+  text-align: center;
+}
+
+.menu a {
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.menu a:active,
+.menu a:visited {
+  color: black;
+}
+
 .body {
-  white-space: nowrap;
+  font-size: 0;
   font-family: Open Sans;
+  margin: 0 auto;
 }
 
 .project {
   display: inline-block;
-  padding: 0 100px;
+  padding: 20px 100px;
   overflow: hidden;
   width: 50%;
   box-sizing: border-box;
@@ -20,7 +35,7 @@
 }
 
 .img-container {
-  background-color: rgb(230, 234, 238);
+  background-color: rgb(223, 229, 234);
   height: 300px;
   padding: 25px;
   box-sizing: border-box;
@@ -75,21 +90,33 @@
   text-align: center;
 }
 
-.grade span::before {
+.grade span:first-child::before {
   content: "";
   display: inline-block;
   width: 10px;
   height: 10px;
   border-radius: 7.5px;
-  background-color: #69b6d5;
+}
+.grade span.grade-green::before {
+  background-color: rgb(139, 209, 109);
+}
+.grade span.grade-orange::before {
+  background-color: rgb(239, 187, 37);
+}
+.grade span.grade-red::before {
+  background-color: rgb(226, 107, 64);
 }
 
 .detail-column {
   margin: 5px 0;
 }
 
-.detail-column-2 .detail {
-  width: 50%;
+.detail-column-2 .detail:first-child {
+  width: 75%;
+}
+
+.detail-column-2 .detail:last-child {
+  width: 25%;
 }
 
 .detail-column-3 .detail {
